fix .travis.yml docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   travis-cargo build &&
   travis-cargo test &&
   travis-cargo bench &&
-  travis-cargo --only stable doc
+  travis-cargo --only nightly doc
 after_success:
 - travis-cargo --only nightly doc-upload
 - travis-cargo coveralls --no-sudo
