--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 authors = ["Pyfisch <pyfisch@gmail.com>"]
 
 [dependencies]
-serde = "*"
 byteorder = "0.3"
+libc = "*"
+serde = "*"
 
 [features]
 unstable = []
