--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ addons:
     - libdw-dev
 rust:
 - nightly
+- beta
+- stable
+- 1.3.0
 before_script:
 - |
   pip install 'travis-cargo<0.2' --user &&
@@ -17,9 +20,9 @@ script:
   travis-cargo build &&
   travis-cargo test &&
   travis-cargo bench &&
-  travis-cargo --only nightly doc
+  travis-cargo --only stable doc
 after_success:
-- travis-cargo --only nightly doc-upload
+- travis-cargo --only stable doc-upload
 - travis-cargo coveralls --no-sudo
 env:
   global:
