--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "serde_cbor"
 version = "0.1.0"
 authors = ["Pyfisch <pyfisch@gmail.com>"]
+repository = "https://github.com/pyfisch/cbor"
+documentation = "http://pyfisch.github.io/cbor/serde_cbor/index.html"
+readme = "README.md"
+license = "MIT"
+license-file = "LICENSE"
+description = "CBOR serialization and deserialization using serde."
+keywords = ["serde", "cbor", "serialization"]
 
 [dependencies]
 byteorder = "0.3"
