--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serde_cbor"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Pyfisch <pyfisch@gmail.com>"]
 repository = "https://github.com/pyfisch/cbor"
 documentation = "http://pyfisch.github.io/cbor/serde_cbor/index.html"
@@ -11,8 +11,8 @@ keywords = ["serde", "cbor", "serialization"]
 
 [dependencies]
 byteorder = "0.3"
-libc = "*"
-serde = "*"
+libc = "0.2.6"
+serde = "0.6.11"
 
 [features]
 unstable = []
