--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "serde_cbor"
-version = "0.3.2"
+version = "0.3.3"
 authors = ["Pyfisch <pyfisch@gmail.com>"]
 repository = "https://github.com/pyfisch/cbor"
 documentation = "http://pyfisch.github.io/cbor/serde_cbor/index.html"
 readme = "README.md"
-license = "MIT"
+license = "MIT/Apache-2.0"
 description = "CBOR serialization and deserialization using serde."
 keywords = ["serde", "cbor", "serialization"]
 
