--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ keywords = ["serde", "cbor", "serialization"]
 
 [dependencies]
 byteorder = "0.5"
-serde = "0.7.0"
-serde_macros = { version="0.7.0", optional=true }
+serde = "0.8.0-rc3"
+serde_macros = { version="0.8.0-rc3", optional=true }
 
 [features]
 unstable = ["serde_macros"]
