--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["serde", "cbor", "serialization"]
 [dependencies]
 byteorder = "1.0"
 serde = "0.8.0"
-serde_macros = { version="0.8.0", optional=true }
+serde_derive = { version="0.8.0", optional=true }
 
 [features]
-unstable = ["serde_macros"]
+unstable = ["serde_derive"]
