--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ keywords = ["serde", "cbor", "serialization"]
 
 [dependencies]
 byteorder = "1.0"
-serde = "0.9.0"
-serde_derive = { version="0.9.0", optional=true }
+serde = "1.0.0"
+serde_bytes = "0.10.0"
+serde_derive = { version="1.0.0", optional=true }
 
 [features]
 unstable = ["serde_derive"]
