--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serde_cbor"
-version = "0.5.2"
+version = "0.6.0-alpha"
 authors = ["Pyfisch <pyfisch@gmail.com>"]
 repository = "https://github.com/pyfisch/cbor"
 documentation = "http://pyfisch.github.io/cbor/serde_cbor/index.html"
@@ -13,7 +13,6 @@ keywords = ["serde", "cbor", "serialization"]
 byteorder = "1.0"
 serde = "1.0.0"
 serde_bytes = "0.10.0"
-serde_derive = { version="1.0.0", optional=true }
 
-[features]
-unstable = ["serde_derive"]
+[dev-dependencies]
+serde_derive = "1.0.0"
