--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "serde_cbor"
-version = "0.6.1"
-authors = ["Pyfisch <pyfisch@gmail.com>"]
+version = "0.7.0"
+authors = [
+    "Pyfisch <pyfisch@gmail.com>",
+    "Steven Fackler <sfackler@gmail.com>"]
 repository = "https://github.com/pyfisch/cbor"
-documentation = "http://pyfisch.github.io/cbor/serde_cbor/index.html"
+documentation = "https://docs.rs/serde_cbor/"
 readme = "README.md"
 license = "MIT/Apache-2.0"
-description = "UNMAINTAINED: CBOR serialization and deserialization using serde."
+description = "CBOR support for serde."
 keywords = ["serde", "cbor", "serialization"]
+categories = ["encoding"]
 
 [dependencies]
 byteorder = "1.0.0"
