--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "MIT/Apache-2.0"
 description = "CBOR support for serde."
 keywords = ["serde", "cbor", "serialization"]
 categories = ["encoding"]
+edition = "2018"
 
 [dependencies]
 byteorder = "1.0.0"
