--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,16 @@ authors = [
     "Pyfisch <pyfisch@gmail.com>",
     "Steven Fackler <sfackler@gmail.com>"]
 repository = "https://github.com/pyfisch/cbor"
-documentation = "https://docs.rs/serde_cbor/"
 readme = "README.md"
 license = "MIT/Apache-2.0"
 description = "CBOR support for serde."
 keywords = ["serde", "cbor", "serialization"]
 categories = ["encoding"]
 edition = "2018"
+
+[badges]
+travis-ci = { repository = "pyfisch/cbor" }
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 byteorder = "1.0.0"
