Implement Error::source when available
Closes #94

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ byteorder = "1.0.0"
 half = "1.2.0"
 serde = "1.0.14"
 
+[build-dependencies]
+rustc_version = "0.2"
+
 [dev-dependencies]
 serde_bytes = "0.10"
 serde_derive = "1.0.14"
