--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,9 @@ half = "1.2.0"
 serde = { version = "1.0.14", default-features = false }
 
 [dev-dependencies]
-serde_bytes = { version = "0.10", default-features = false }
 serde_derive = { version = "1.0.14", default-features = false }
 
 [features]
 default = ["std"]
-std = ["serde/std", "serde_bytes/std" ]
+std = ["serde/std" ]
 unsealed_read_write = []
