Implement 'to_vec' and 'from_slice' for no_std
We implement `to_vec()` and `from_slice()` in a `no_std` environment to
simplify serialization. For this we require the `alloc` feature flag.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,8 @@ serde_derive = { version = "1.0.14", default-features = false }
 
 [features]
 default = ["std"]
+# Uses `alloc` library and adds support for vector functions with
+# `no_std`.
+alloc = ["serde/alloc"]
 std = ["serde/std" ]
 unsealed_read_write = []
