Serialize CBOR tagged values
Depends on an experimental branch of serde.
Implement Serializer::serialize_tagged_value
for CBOR and a tag serializer.

Add a test case.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 byteorder = { version = "1.0.0", default-features = false }
 half = "1.2.0"
-serde = { version = "1.0.14", default-features = false }
+serde = { git = "ssh://git@github.com/pyfisch/serde", branch="tagged-value-serialization", default-features = false }
 
 [dev-dependencies]
 serde_derive = { version = "1.0.14", default-features = false }
