Correct conditional script in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - cargo build --no-default-features --features alloc --target thumbv7em-none-eabihf # Test we can build a platform that does not have std.
   - cargo test --no-default-features --lib --tests # Run no_std tests
   - >
-    [[ $TRAVIS_RUST_VERSION != "1.31.0" ]]
-    && cargo build --no-default-features --features alloc
+    [[ $TRAVIS_RUST_VERSION == "1.31.0" ]]
+    || cargo build --no-default-features --features alloc
   - cargo build --features unsealed_read_write # The crate should still build when the unsealed_read_write feature is enabled.
   - cargo build --no-default-features --features unsealed_read_write # The crate should still build when the unsealed_read_write feature is enabled and std disabled.
