--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ script:
   - (rustup component add clippy && cargo clippy --all -- -D clippy::all) || true
   - cargo build
   - cargo test
-  - cargo build --no-default-features --features alloc --target thumbv7em-none-eabihf # Test we can build a platform that does not have std.
+  - >
+    [[ $TRAVIS_RUST_VERSION == "1.31.0" ]]
+    || cargo build --no-default-features --features alloc --target thumbv7em-none-eabihf
+    # Test we can build a platform that does not have std.
   - cargo test --no-default-features --lib --tests # Run no_std tests
   - >
     [[ $TRAVIS_RUST_VERSION == "1.31.0" ]]
