--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/pyfisch/cbor"
 readme = "README.md"
 license = "MIT/Apache-2.0"
 description = "CBOR support for serde."
-keywords = ["serde", "cbor", "serialization"]
+keywords = ["serde", "cbor", "serialization", "no_std"]
 categories = ["encoding"]
 edition = "2018"
 
