remove serde_cbor for clarity and add cbor crate (draft)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,4 @@
-[package]
-name = "serde_cbor"
-version = "0.11.1"
-authors = [
-    "Pyfisch <pyfisch@gmail.com>",
-    "Steven Fackler <sfackler@gmail.com>"]
-repository = "https://github.com/pyfisch/cbor"
-readme = "README.md"
-license = "MIT/Apache-2.0"
-description = "CBOR support for serde."
-keywords = ["serde", "cbor", "serialization", "no_std"]
-categories = ["encoding"]
-edition = "2018"
-
-[badges]
-travis-ci = { repository = "pyfisch/cbor" }
-maintenance = { status = "passively-maintained" }
-
-[dependencies]
-half = "1.2.0"
-serde = { version = "1.0.14", default-features = false }
-
-[dev-dependencies]
-serde_derive = { version = "1.0.14", default-features = false }
-
-[features]
-default = ["std"]
-# Uses `alloc` library and adds support for vector functions with
-# `no_std`.
-alloc = ["serde/alloc"]
-std = ["serde/std" ]
-unsealed_read_write = []
-tags = []
+[workspace]
+members = [
+    "src/cbor"
+]
