--- a/src/cbor/Cargo.toml
+++ b/src/cbor/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 authors = ["Hans Larsen <hans@larsen.online>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+half = { version = "1.4.1", optional = true }
 
 [features]
+half_float = ["half"]
 std = []
 default = ["std"]
