--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ script:
   - cargo test
   - >
     [[ $TRAVIS_RUST_VERSION == "1.31.0" ]]
-    || cargo build --no-default-features --features alloc --target thumbv7em-none-eabihf
+    || cargo build --no-default-features --features alloc --target thumbv7em-none-eabihf --manifest-path serde_cbor/Cargo.toml
     # Test we can build a platform that does not have std.
-  - cargo test --no-default-features --lib --tests # Run no_std tests
+  - cargo test --no-default-features --lib --tests --manifest-path serde_cbor/Cargo.toml # Run no_std tests
   - >
     [[ $TRAVIS_RUST_VERSION == "1.31.0" ]]
-    || cargo build --no-default-features --features alloc
-  - cargo build --features unsealed_read_write # The crate should still build when the unsealed_read_write feature is enabled.
-  - cargo build --no-default-features --features unsealed_read_write # The crate should still build when the unsealed_read_write feature is enabled and std disabled.
+    || cargo build --no-default-features --features alloc --manifest-path serde_cbor/Cargo.toml
+  - cargo build --features unsealed_read_write --manifest-path serde_cbor/Cargo.toml # The crate should still build when the unsealed_read_write feature is enabled.
+  - cargo build --no-default-features --features unsealed_read_write --manifest-path serde_cbor/Cargo.toml # The crate should still build when the unsealed_read_write feature is enabled and std disabled.
