feat: deserialization for numbers
Also added some proptests to make sure those numbers deserialize
and reserialize to the same values.

--- a/src/cbor/Cargo.toml
+++ b/src/cbor/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies]
 half = { version = "1.4.1", optional = true }
 
+[dev-dependencies]
+proptest = "0.9.5"
+
 [features]
 default = ["std"]
 half_float = ["half"]
