--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
+# Build Output
 target
+**/proptest-regressions
+
+# Rust Toolchain
 Cargo.lock
-*.rs.bk
 tokamak.toml
+
+# IDEs / Editors
+*.rs.bk
 .idea
+vscode/
 *.iml
-examples/ferris.cbor
-.cargo/config
