--- a/src/cddl/Cargo.toml
+++ b/src/cddl/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+pest = "2.1.3"
+pest_derive = "2.1.0"
+clap = { git = "https://github.com/clap-rs/clap/" }
+
