--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "serde_cbor"
-version = "0.11.1"
+version = "0.11.2"
 authors = [
-    "Pyfisch <pyfisch@gmail.com>",
+    "Pyfisch <pyfisch@posteo.org>",
     "Steven Fackler <sfackler@gmail.com>"]
 repository = "https://github.com/pyfisch/cbor"
 readme = "README.md"
@@ -14,7 +14,7 @@ edition = "2018"
 
 [badges]
 travis-ci = { repository = "pyfisch/cbor" }
-maintenance = { status = "passively-maintained" }
+maintenance = { status = "as-is" }
 
 [dependencies]
 half = "1.2.0"
